tests/security/taintedInputToParamAlternatePath/output.txt
ERROR: TaintedData - input.hack:22:26 - Data from a URL query string found its way to a SQL query using path $_GET --array-fetch--> arrayvalue-fetch (input.hack:6:47) ----> A::getAppendedUserId#1 (input.hack:10:46) ----> $user_id (input.hack:10:46) ----> composition (input.hack:11:16) ----> return (input.hack:11:16) ----> call to A::getAppendedUserId (input.hack:10:58) ----> A::deleteUser#3 (input.hack:18:83) ----> $userId2 (input.hack:18:83) ----> composition (input.hack:22:26) ----> AsyncMysqlConnection::query#1 (input.hack:22:26)
